--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,7 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 	<!-- Base application theme. -->
-	<style name="Base.Theme.Emhotel" parent="Theme.Material3.DayNight.NoActionBar">
-		<!-- Customize your dark theme here. -->
-		<!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+	<style name="Theme.Emhotel" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
+
 	</style>
 </resources>
