--- a/features/hotelrooms/src/main/res/values/colors.xml
+++ b/features/hotelrooms/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
 	<color name="white">#FFFFFF</color>
 	<color name="surface">#F6F6F9</color>
 	<color name="blue">#0D72FF</color>
+	<color name="light_blue">#B6D4FF</color>
 </resources>
