--- a/features/booking/src/main/res/values/colors.xml
+++ b/features/booking/src/main/res/values/colors.xml
@@ -8,4 +8,20 @@
 	<color name="surface">#F6F6F9</color>
 	<color name="blue">#0D72FF</color>
 	<color name="light_blue">#B6D4FF</color>
+
+	<color name="yellow">#FFA800</color>
+	<color name="yellow_low">#56FFC700</color>
+
+
+
+	<array name="rating_color">
+		<item>@color/yellow_low</item>
+		<!--Add more colors if needed-->
+	</array>
+
+	<array name="rating_color_text">
+		<item>@color/yellow</item>
+		<!--Add more colors if needed-->
+	</array>
+
 </resources>
