--- a/features/hotelrooms/src/main/res/layout/room_item.xml
+++ b/features/hotelrooms/src/main/res/layout/room_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_marginTop="5dp"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
@@ -86,6 +87,4 @@
 		app:background="@null"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintTop_toBottomOf="@id/price_layout" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
